--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@headlessui/react": "^1.6.5",
+    "@react-hook/window-size": "^3.1.1",
     "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.1.1",
@@ -18,7 +19,9 @@
     "next": "12.1.6",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-use-window-size": "^1.0.1",
     "swiper": "^8.4.2",
     "tailwindcss": "^3.1.3"
   },
